fix bug where page is too long for safari

--- a/style.css
+++ b/style.css
@@ -34,7 +34,6 @@ h1 {
   position: absolute;
   top: 0; left: 0; bottom: 0;
   margin: 15px;
-  height: 100%;
   text-align: right;
 }
 #projects h3 {
